# com.dim.streamdeck

./: .gitignore  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: build-plugin.yaml  build-rust-packages.yaml  build-solo-mode.yaml  pr-build.yaml  publish-package.yaml
changelogs/: 3.0.0.md  3.0.1.md  3.0.2.md  3.0.3.md  3.1.0.md  3.2.0.md  3.3.0.md  3.3.1.md  3.3.2.md  3.3.3.md  3.3.4.md
macro/: Cargo.toml
paster/: Cargo.toml
paster/src/: main.rs
plugin/: .env.example  manifest.json  package.json  rollup.config.mjs  tsconfig.json
plugin/com.dim.streamdeck.sdPlugin/: DIM-Mini.streamDeckProfile  DIM-Plus.streamDeckProfile  DIM-XL.streamDeckProfile  DIM.streamDeckProfile  manifest.json  picker-layout-full.json  picker-layout.json
plugin/src/: main.ts  plugin.ts  settings.ts  state.ts  types.d.ts
plugin/src/actions/: app.ts  checkpoint.ts  farming-mode.ts  index.ts  loadout.ts  max-power.ts  postmaster.ts  randomize.ts  refresh.ts  search.ts  vault.ts
plugin/src/dim/: api.ts  message.ts  types.ts
plugin/src/lib/: cache.ts  cycle.ts  gesture.ts  image.ts
plugin/src/util/: cache.ts  canvas.ts  cyclic.ts  db.ts  equipment.ts  ev.ts  gestures.ts  images.ts  logger.ts  stream.ts  version.ts  watcher.ts
property-inspector/: .env  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
property-inspector/src/: StreamDeck.tsx  atoms.ts  index.css  logger.ts  main.tsx  react-app-env.d.ts  util.tsx
property-inspector/src/actions/: app.tsx  checkpoint.tsx  loadout.tsx  (+10 more)
rust/: .rustfmt.toml  Cargo.toml  setup.bat
rust/src/: actions.rs  dim.rs  global_settings.rs  main.rs  server.rs  shared.rs  util.rs
rust/src/actions/: authorization.rs  auto_profile.rs  farming_mode.rs  loadout.rs  max_power.rs  metrics.rs  open_dim.rs  postmaster.rs  progress.rs  pull_item.rs  randomize.rs  refresh.rs  rotation.rs  search.rs  solo_mode.rs  vault.rs
rust/src/dim/: events_recv.rs  events_sent.rs
shared/: index.ts  package.json
shared/src/: app.ts  search.ts
solo-mode/: Cargo.toml  build.rs
solo-mode-service/: Cargo.toml
solo-mode-service/src/: install.rs  main.rs  remove.rs
solo-mode/src/: install.rs  main.rs  remove.rs
typer/: Cargo.toml
typer/src/: main.rs
types/: index.ts  package.json  tsconfig.json
types/src/: checkpoint.ts  max-power.ts  metrics.ts  postmaster.ts  pull-item.ts  randomize.ts  schemas.ts  types.ts  vault.ts
(+44 files in other folders)
